--- a/chatterbox-imap-sample-war/pom.xml
+++ b/chatterbox-imap-sample-war/pom.xml
@@ -24,8 +24,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.tomitribe</groupId>
-    <artifactId>chatterbox-imap-parent</artifactId>
+    <groupId>org.tomitribe.samples</groupId>
+    <artifactId>chatterbox-samples-parent</artifactId>
     <version>0.2-SNAPSHOT</version>
   </parent>
 
@@ -37,22 +37,7 @@
     <dependency>
       <groupId>org.tomitribe</groupId>
       <artifactId>chatterbox-imap-api</artifactId>
-      <version>${project.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.tomitribe</groupId>
-      <artifactId>tomitribe-util</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax</groupId>
-      <artifactId>javaee-api</artifactId>
+      <version>${chatterbox.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -63,6 +48,24 @@
       <type>zip</type>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.tomitribe</groupId>
+      <artifactId>tomitribe-util</artifactId>
+      <version>1.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax</groupId>
+      <artifactId>javaee-api</artifactId>
+      <version>7.0</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -119,13 +122,14 @@
           <context>ROOT</context>
           <libs>
             <lib>remove:geronimo-javamail_1.4_mail</lib>
-            <lib>org.tomitribe:chatterbox-imap-api:${project.version}</lib>
+            <lib>org.tomitribe:chatterbox-imap-api:${chatterbox.version}</lib>
             <lib>org.apache.geronimo.javamail:geronimo-javamail_1.4_mail:1.9.0-alpha-2</lib>
           </libs>
           <apps>
-            <app>org.tomitribe:chatterbox-imap-rar:${project.version}:rar</app>
+            <app>org.tomitribe:chatterbox-imap-rar:${chatterbox.version}:rar</app>
           </apps>
         </configuration>
       </plugin>
     </plugins>
-  </build></project>
+  </build>
+</project>
