--- a/chatterbox-xmpp-sample-war/pom.xml
+++ b/chatterbox-xmpp-sample-war/pom.xml
@@ -24,8 +24,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.tomitribe</groupId>
-        <artifactId>chatterbox-xmpp-parent</artifactId>
+        <groupId>org.tomitribe.samples</groupId>
+        <artifactId>chatterbox-samples-parent</artifactId>
         <version>0.2-SNAPSHOT</version>
     </parent>
 
@@ -37,13 +37,13 @@
         <dependency>
             <groupId>org.tomitribe</groupId>
             <artifactId>chatterbox-xmpp-api</artifactId>
-            <version>${project.version}</version>
+            <version>${chatterbox.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.tomitribe</groupId>
             <artifactId>chatterbox-xmpp-impl</artifactId>
-            <version>${project.version}</version>
+            <version>${chatterbox.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -84,10 +84,10 @@
                     <tomeeVersion>${version.tomee}</tomeeVersion>
                     <tomeeClassifier>plus</tomeeClassifier>
                     <libs>
-                        <lib>org.tomitribe:chatterbox-xmpp-api:${project.version}:jar</lib>
+                        <lib>org.tomitribe:chatterbox-xmpp-api:${chatterbox.version}:jar</lib>
                     </libs>
                     <apps>
-                        <app>org.tomitribe:chatterbox-xmpp-rar:${project.version}:rar</app>
+                        <app>org.tomitribe:chatterbox-xmpp-rar:${chatterbox.version}:rar</app>
                     </apps>
                 </configuration>
             </plugin>
