--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <version>2</version>
   </parent>
 
+  <groupId>org.tomitribe.samples</groupId>
   <artifactId>chatterbox-samples-parent</artifactId>
   <version>0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -36,13 +37,19 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <chatterbox.version>0.2</chatterbox.version>
+    <version.arquillian>1.1.1.Final</version.arquillian>
+    <version.shrinkwrap.descriptor>2.0.0-alpha-5</version.shrinkwrap.descriptor>
+    <version.shrinkwrap.shrinkwrap>1.0.1</version.shrinkwrap.shrinkwrap>
+    <version.tomee>1.7.2</version.tomee>
+    <version.openejb>4.7.2</version.openejb>
+    <maven.checkstyle.plugin.version>2.16</maven.checkstyle.plugin.version>
   </properties>
 
   <modules>
     <module>chatterbox-imap-sample-war</module>
     <module>chatterbox-slack-sample-war</module>
     <module>chatterbox-twitter-sample-war</module>
-    <module>chatterbox-twitter-jokes-war</module>
     <module>chatterbox-xmpp-sample-war</module>
   </modules>
 
